--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,7 +61,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dimen_5"
-                        android:text="@string/_500"
+                        android:text="@{presenter.totalSteps.toString()}"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold" />
