--- a/app/src/main/res/layout/fragment_award.xml
+++ b/app/src/main/res/layout/fragment_award.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="item"
-            type="com.example.smac_runapp.presenter.AwardPresenter" />
+            type="com.example.smac_runapp.presenter.HomePresenter" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -44,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_margin="@dimen/dimen_4"
-                    android:countTitlesMonthChallenger="@{item.countTitles}"
+                    android:countTitlesMonthChallenger="@{item.countTitlesMonthCha}"
                     android:textColor="@color/text_red"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -87,7 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_margin="@dimen/dimen_4"
-                    android:text="@string/_3_12_titles"
+                    android:countTitlesAccumulateChallenger="@{item.countTitlesAccumulateCha}"
                     android:textColor="@color/text_red"
                     android:textSize="18sp"
                     android:textStyle="bold" />
